--- a/index.html
+++ b/index.html
@@ -353,18 +353,8 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/wp-halaman1.png"
-                alt="Project 3"
-                class="project-img"
-              />
-              <img
                 src="./assets/wp-halaman2.png"
                 alt="Project 3"
-                class="project-img"
-              />
-              <img
-                src="./assets/wp-halaman3.png"
-                alt="Project 2"
                 class="project-img"
               />
             </div>
@@ -375,6 +365,30 @@
                 class="btn btn-color-3"
                 onclick="location.href='https://kelompok5.05tplp005.my.id/'"
                 >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/game-snack.png"
+                alt="Project 3"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Game Snack</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-4"
+                onclick="location.href='https://github.com/iosramgio/dasboard-adminanggio'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-3"
+                onclick="location.href='Snack-Game-main/game.html'"
+              >
                 Live Demo
               </button>
             </div>
