Pesan deskriptif untuk perubahan

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
               </button>
               <button
                 class="btn btn-color-3"
-                onclick="location.href='Snack-Game-main/game.html'"
+                onclick="location.href='Snack-Game-main/Game.html'"
               >
                 Live Demo
               </button>
